refactor: ecriture de tests supplémentaires et clean de code, commentaire ect, composant normalement finis